--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body {
 
 nav {
   position: relative;
-  /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+  font-family: 'Times New Roman', Times, serif;
   color: #fff;
   text-transform: uppercase;
-  /* letter-spacing: 1px; */
+  /* letter-spacing: 4px; */
   overflow: hidden;
   background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgb(70, 22, 22), rgba(0, 0, 0, 0));
   border: rgba(255, 255, 255, 0);
@@ -25,6 +25,7 @@ nav {
 
 .nav-mobile {
   font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
 }
 
 /* .brand-logo {
