--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  margin-top: 60px;
+}
+
+p {
+  color: white;
 }
 
 nav {
@@ -55,8 +60,8 @@ nav #nav-mobile a{
   font-size: 12px;
 }
 
-footer {
-  background-color: black;
+.page-footer {
+  background-color: rgba(0, 0, 0, 0.507);
 }
 
 /* .brand-logo {
