--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 30px;
   color: #fff;
@@ -65,6 +65,37 @@ p {
   z-index: 2;
 }
 
+.navbar-nav {
+  float:none;
+  margin:0 auto;
+  display: block;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.navbar-nav > li {
+  display: inline-block;
+  float:none;
+}
+
+#intro {
+  padding-top: 60px;
+}
+
+#proj {
+  padding-top: 60px;
+}
+
+#mems {
+  padding-top: 60px;
+}
+
+h2{
+  color: white;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+}
+
 h5{
   color: white;
   text-align: center;
@@ -75,6 +106,34 @@ h5{
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.card{
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: rgba(0, 0, 0, 0);
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-radius: .25rem;
+}
+
+.modal-content {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #ffffffb5;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: .3rem;
+  outline: 0;
+}
 
 @keyframes animate
 {
