--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,6 @@ p {
   box-shadow: none;
 }
 
-/* .navbar-light .navbar-brand {
-  color: rgb(255, 0, 0);
-  text-align: center;
-  font-size: 30px;
-  font-family: 'Times New Roman', Times, serif;
-} */
-
-/* .navbar-nav a:hover {
-  background-color: rgba(15, 174, 236, 0.3);
-} */
-
 .navbar-light .navbar-toggler {
   color: rgb(255, 255, 255);
   border-color: rgba(255, 255, 255);
@@ -90,13 +79,30 @@ p {
   padding-top: 60px;
 }
 
-h2{
+#contact {
+  background-color: rgba(117, 65, 92, 0.8);
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  margin-top: 60px;
+  border-radius: 25px;
+  height: 400px;
+}
+
+h2 {
   color: white;
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
 }
 
-h5{
+h3 {
+  color: white;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h5 {
   color: white;
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
