minor font work

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,11 @@ h3 {
   text-align: center;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
+h4 {
+  color: white;
+  text-align: center;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+}
 
 h5 {
   color: black;
